<resources>
    <string name="app_name">ذكر الله</string>
    <string name="action_settings">Settings</string>
    <string name="Forgivens_1">أستغفر الله</string>
    <string name="Forgivens_2">سبحان الله</string>
    <string name="Forgivens_3">الحمد لله</string>
    <string name="Forgivens_4">الله أكبر</string>
    <string name="new_Forgivens">نوع جديد</string>
    <string name="add_name_type">أدخل النوع الجديد</string>
    <string name="forgivneess_type">نوع الأستغفار</string>
    <string name="creat_new_type">إنشاء نوع جديد</string>
    <string name="Remember">تذكير كل ساعة</string>
    <string name="remember">ذكر الله</string>
    <string name="_0">0</string>
    <string name="hijri_calendar">التاريخ الهجري</string>
    <string name="Select_Your_option">إختر من الخيارات</string>
    <string name="Delete_or_Cancel">حذف </string>
    <string name="Delete">حذف</string>
    <string name="Cancel">رجوع</string>
</resources>
