<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_frogivnes2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ahmad.mustafa.foregivness3.AddNewFrogivnes2">


    <Button
        android:text="@string/Forgivens_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgivnes_1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgivnes_2"/>

    <Button
        android:text="@string/Forgivens_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgivnes_2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:text="@string/Forgivens_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgivnes_3"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgivnes_1"/>

    <Button
        android:text="@string/Forgivens_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgivnes_4"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgivnes_3"/>

    <Button
        android:text="@string/new_Forgivens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_fogivness_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgivnes_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.060000002"/>

</android.support.constraint.ConstraintLayout>
